# data-image-analytics

./: .gitignore  README.md  groups_maker.ipynb  pyproject.toml  requirements.txt
course/: data_visualisation.ipynb  introduction.ipynb  model-evaluation-and-improvement.ipynb  preprocessing.ipynb  supervised-learning.ipynb  unsupervised-learning.ipynb
exercises/: iris_classifier.ipynb  pandas_numpy_exercises.ipynb
