[tool.poetry]
name = "data-and-image-analytics"
version = "0.1.0"
description = ""
authors = ["Vito Mario Fico <vmfico@uloyola.es>"]
readme = "README.md"
packages = [{include = "data_and_image_analytics"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"
pandas = "^2.0.2"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
graphviz = "^0.20.1"
imbalanced-learn = "^0.10.1"
xgboost = "^1.7.6"
lightgbm = "^3.3.5"
squarify = "^0.4.3"
networkx = "^3.1"
geopandas = "^0.13.2"
xlrd = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
