[tool.poetry]
name = "data-and-image-analytics"
version = "0.1.0"
description = ""
authors = ["Vito Mario Fico <vmfico@uloyola.es>"]
readme = "README.md"
packages = [{include = "data_and_image_analytics"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.25.0"
pandas = "^2.0.2"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
seaborn = "^0.13.2"
xgboost = "^2.1.1"
requests = "^2.32.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
